Update C++ API Docs

--- a/cpp-api/classinviwo_1_1PropertyOwnerObservable.html
+++ b/cpp-api/classinviwo_1_1PropertyOwnerObservable.html
@@ -143,25 +143,25 @@ $(function(){initNavTree('classinviwo_1_1PropertyOwnerObservable.html',''); init
 <area href="classinviwo_1_1IsoTFProperty.html" title="composite property combining transfer function and isovalue properties" alt="inviwo::IsoTFProperty" shape="rect" coords="392,1288,774,1312"/>
 <area href="classinviwo_1_1LineSettingsProperty.html" alt="inviwo::LineSettingsProperty" shape="rect" coords="392,1344,774,1368"/>
 <area href="classinviwo_1_1ListProperty.html" title="A property that has specified sub-properties which can be added using the graphical user interface." alt="inviwo::ListProperty" shape="rect" coords="392,1400,774,1424"/>
-<area href="classinviwo_1_1MeshInformationProperty.html" title="A CompositeProperty holding properties to show information about a mesh and its buffers." alt="inviwo::MeshInformationProperty" shape="rect" coords="392,1456,774,1480"/>
-<area href="structinviwo_1_1MeshRasterizer_1_1AlphaSettings.html" title="Settings to assemble the equation for the alpha values. All individual factors are clamped to [0,..." alt="inviwo::MeshRasterizer::AlphaSettings" shape="rect" coords="392,1512,774,1536"/>
-<area href="structinviwo_1_1MeshRasterizer_1_1EdgeSettings.html" title="Settings controlling how edges are highlighted." alt="inviwo::MeshRasterizer::EdgeSettings" shape="rect" coords="392,1568,774,1592"/>
-<area href="classinviwo_1_1OverlayProperty.html" title="CompositeProperty for overlay images. An overlay is defined by a position, a anchor position,..." alt="inviwo::OverlayProperty" shape="rect" coords="392,1624,774,1648"/>
-<area href="classinviwo_1_1PositionProperty.html" title="Enables Edit a position in world or view space." alt="inviwo::PositionProperty" shape="rect" coords="392,1680,774,1704"/>
-<area href="classinviwo_1_1RaycastingProperty.html" title="composite property holding parameters for volume raycasting" alt="inviwo::RaycastingProperty" shape="rect" coords="392,1736,774,1760"/>
-<area href="classinviwo_1_1SequenceTimerProperty.html" alt="inviwo::SequenceTimerProperty" shape="rect" coords="392,1792,774,1816"/>
-<area href="classinviwo_1_1SimpleLightingProperty.html" alt="inviwo::SimpleLightingProperty" shape="rect" coords="392,1848,774,1872"/>
-<area href="classinviwo_1_1SimpleRaycastingProperty.html" alt="inviwo::SimpleRaycastingProperty" shape="rect" coords="392,1904,774,1928"/>
-<area href="classinviwo_1_1StipplingProperty.html" alt="inviwo::StipplingProperty" shape="rect" coords="392,1960,774,1984"/>
-<area href="classinviwo_1_1StringsProperty.html" title="CompositeProperty for a fixed set of StringProperties." alt="inviwo::StringsProperty&lt; N &gt;" shape="rect" coords="392,2016,774,2040"/>
-<area href="classinviwo_1_1TextOverlayProperty.html" alt="inviwo::TextOverlayProperty" shape="rect" coords="392,2072,774,2096"/>
-<area href="classinviwo_1_1Trackball.html" alt="inviwo::Trackball" shape="rect" coords="392,2128,774,2152"/>
-<area href="classinviwo_1_1TransformListProperty.html" alt="inviwo::TransformListProperty" shape="rect" coords="392,2184,774,2208"/>
-<area href="classinviwo_1_1plot_1_1AxisStyleProperty.html" title="A convenience property for updating/overriding multiple axes properties. A property change will propa..." alt="inviwo::plot::AxisStyleProperty" shape="rect" coords="392,2240,774,2264"/>
-<area href="classinviwo_1_1plot_1_1BoxSelectionProperty.html" title="Settings for rectangle selection/filtering." alt="inviwo::plot::BoxSelectionProperty" shape="rect" coords="392,2296,774,2320"/>
-<area href="classinviwo_1_1plot_1_1CategoricalAxisProperty.html" title="Axis for variables with a fixed number of possible values, e.g., categories. Will set the AxisPropert..." alt="inviwo::plot::CategoricalAxisProperty" shape="rect" coords="392,2352,774,2376"/>
-<area href="classinviwo_1_1plot_1_1MajorTickProperty.html" alt="inviwo::plot::MajorTickProperty" shape="rect" coords="392,2408,774,2432"/>
-<area href="classinviwo_1_1plot_1_1MarginProperty.html" title="Property for keeping track of margins." alt="inviwo::plot::MarginProperty" shape="rect" coords="392,2464,774,2488"/>
+<area href="classinviwo_1_1MarginProperty.html" title="Property for keeping track of margins." alt="inviwo::MarginProperty" shape="rect" coords="392,1456,774,1480"/>
+<area href="classinviwo_1_1MeshInformationProperty.html" title="A CompositeProperty holding properties to show information about a mesh and its buffers." alt="inviwo::MeshInformationProperty" shape="rect" coords="392,1512,774,1536"/>
+<area href="structinviwo_1_1MeshRasterizer_1_1AlphaSettings.html" title="Settings to assemble the equation for the alpha values. All individual factors are clamped to [0,..." alt="inviwo::MeshRasterizer::AlphaSettings" shape="rect" coords="392,1568,774,1592"/>
+<area href="structinviwo_1_1MeshRasterizer_1_1EdgeSettings.html" title="Settings controlling how edges are highlighted." alt="inviwo::MeshRasterizer::EdgeSettings" shape="rect" coords="392,1624,774,1648"/>
+<area href="classinviwo_1_1OverlayProperty.html" title="CompositeProperty for overlay images. An overlay is defined by a position, a anchor position,..." alt="inviwo::OverlayProperty" shape="rect" coords="392,1680,774,1704"/>
+<area href="classinviwo_1_1PositionProperty.html" title="Enables Edit a position in world or view space." alt="inviwo::PositionProperty" shape="rect" coords="392,1736,774,1760"/>
+<area href="classinviwo_1_1RaycastingProperty.html" title="composite property holding parameters for volume raycasting" alt="inviwo::RaycastingProperty" shape="rect" coords="392,1792,774,1816"/>
+<area href="classinviwo_1_1SequenceTimerProperty.html" alt="inviwo::SequenceTimerProperty" shape="rect" coords="392,1848,774,1872"/>
+<area href="classinviwo_1_1SimpleLightingProperty.html" alt="inviwo::SimpleLightingProperty" shape="rect" coords="392,1904,774,1928"/>
+<area href="classinviwo_1_1SimpleRaycastingProperty.html" alt="inviwo::SimpleRaycastingProperty" shape="rect" coords="392,1960,774,1984"/>
+<area href="classinviwo_1_1StipplingProperty.html" alt="inviwo::StipplingProperty" shape="rect" coords="392,2016,774,2040"/>
+<area href="classinviwo_1_1StringsProperty.html" title="CompositeProperty for a fixed set of StringProperties." alt="inviwo::StringsProperty&lt; N &gt;" shape="rect" coords="392,2072,774,2096"/>
+<area href="classinviwo_1_1TextOverlayProperty.html" alt="inviwo::TextOverlayProperty" shape="rect" coords="392,2128,774,2152"/>
+<area href="classinviwo_1_1Trackball.html" alt="inviwo::Trackball" shape="rect" coords="392,2184,774,2208"/>
+<area href="classinviwo_1_1TransformListProperty.html" alt="inviwo::TransformListProperty" shape="rect" coords="392,2240,774,2264"/>
+<area href="classinviwo_1_1plot_1_1AxisStyleProperty.html" title="A convenience property for updating/overriding multiple axes properties. A property change will propa..." alt="inviwo::plot::AxisStyleProperty" shape="rect" coords="392,2296,774,2320"/>
+<area href="classinviwo_1_1plot_1_1BoxSelectionProperty.html" title="Settings for rectangle selection/filtering." alt="inviwo::plot::BoxSelectionProperty" shape="rect" coords="392,2352,774,2376"/>
+<area href="classinviwo_1_1plot_1_1CategoricalAxisProperty.html" title="Axis for variables with a fixed number of possible values, e.g., categories. Will set the AxisPropert..." alt="inviwo::plot::CategoricalAxisProperty" shape="rect" coords="392,2408,774,2432"/>
+<area href="classinviwo_1_1plot_1_1MajorTickProperty.html" alt="inviwo::plot::MajorTickProperty" shape="rect" coords="392,2464,774,2488"/>
 <area href="classinviwo_1_1plot_1_1MinorTickProperty.html" alt="inviwo::plot::MinorTickProperty" shape="rect" coords="392,2520,774,2544"/>
 <area href="classinviwo_1_1plot_1_1PersistenceDiagramPlotGL_1_1Properties.html" alt="inviwo::plot::PersistenceDiagramPlotGL::Properties" shape="rect" coords="392,2576,774,2600"/>
 <area href="classinviwo_1_1plot_1_1ScatterPlotGL_1_1Properties.html" alt="inviwo::plot::ScatterPlotGL::Properties" shape="rect" coords="392,2632,774,2656"/>
