--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -1206,6 +1206,8 @@
 <a href="classinviwo_1_1LorenzSystem-members.html"/>
 <a href="classinviwo_1_1MarchingTetrahedron.html"/>
 <a href="classinviwo_1_1MarchingTetrahedron-members.html"/>
+<a href="classinviwo_1_1MarginProperty.html"/>
+<a href="classinviwo_1_1MarginProperty-members.html"/>
 <a href="classinviwo_1_1MenuItem.html"/>
 <a href="classinviwo_1_1MenuItem-members.html"/>
 <a href="classinviwo_1_1Mesh.html"/>
@@ -3221,8 +3223,6 @@
 <a href="classinviwo_1_1plot_1_1MajorTickProperty-members.html"/>
 <a href="classinviwo_1_1plot_1_1MajorTickSettings.html"/>
 <a href="classinviwo_1_1plot_1_1MajorTickSettings-members.html"/>
-<a href="classinviwo_1_1plot_1_1MarginProperty.html"/>
-<a href="classinviwo_1_1plot_1_1MarginProperty-members.html"/>
 <a href="classinviwo_1_1plot_1_1MeshAxis.html"/>
 <a href="classinviwo_1_1plot_1_1MeshAxis-members.html"/>
 <a href="classinviwo_1_1plot_1_1MinorTickData.html"/>
@@ -3968,6 +3968,7 @@
 <a href="namespacemembers_func_x.html"/>
 <a href="namespacemembers_func_y.html"/>
 <a href="namespacemembers_func_z.html"/>
+<a href="namespacemembers_vars.html"/>
 <a href="namespacemembers_type.html"/>
 <a href="namespacemembers_type.html"/>
 <a href="namespacemembers_type.html"/>
@@ -5626,6 +5627,10 @@
 <a href="classinviwo_1_1MPVMVolumeReader.html"/>
 <a href="classinviwo_1_1MarchingTetrahedron.html"/>
 <a href="classinviwo_1_1MarchingTetrahedron.html#af481fc2cac97c5144f96331989bb5611"/>
+<a href="classinviwo_1_1MarginProperty.html"/>
+<a href="classinviwo_1_1MarginProperty.html#a3c3bebc58a242ef17f668864048ebb30"/>
+<a href="classinviwo_1_1MarginProperty.html#a500f96ad052ba3b74073c36ecdb7801a"/>
+<a href="classinviwo_1_1MarginProperty.html#a9c3f3b635d74ad47b1edd8170477cc13"/>
 <a href="classinviwo_1_1MenuItem.html"/>
 <a href="classinviwo_1_1Mesh.html"/>
 <a href="classinviwo_1_1Mesh.html#a0121194cdd3679a1577a7f98396d094a"/>
@@ -7751,10 +7756,6 @@
 <a href="classinviwo_1_1plot_1_1MajorTickProperty.html"/>
 <a href="classinviwo_1_1plot_1_1MajorTickProperty.html#a6584f5d17cd22a3c0439ee5886659449"/>
 <a href="classinviwo_1_1plot_1_1MajorTickSettings.html"/>
-<a href="classinviwo_1_1plot_1_1MarginProperty.html"/>
-<a href="classinviwo_1_1plot_1_1MarginProperty.html#a92a883143de32dd0daf49dd139dd2022"/>
-<a href="classinviwo_1_1plot_1_1MarginProperty.html#aba7158ed0fe5b452caf81baabf446417"/>
-<a href="classinviwo_1_1plot_1_1MarginProperty.html#afc0604aa80d6da5d65dd8d803c974d25"/>
 <a href="classinviwo_1_1plot_1_1MeshAxis.html"/>
 <a href="classinviwo_1_1plot_1_1MeshAxis.html#a2a31eb70f5b5dcd504e1986e1b01bb40"/>
 <a href="classinviwo_1_1plot_1_1MinorTickData.html"/>
@@ -8022,33 +8023,35 @@
 <a href="namespaceinviwo_1_1cimgutil.html#aadf2e63ccba4cb446848d6c5a0e70ccc"/>
 <a href="namespaceinviwo_1_1color.html"/>
 <a href="namespaceinviwo_1_1color.html#a021d8d0b389cccf6b5b8569a8c71a949"/>
-<a href="namespaceinviwo_1_1color.html#a0366d7506fa7a16c69449bc3cd581fb7"/>
-<a href="namespaceinviwo_1_1color.html#a061872c662e809c04691440094f36d41"/>
 <a href="namespaceinviwo_1_1color.html#a08e2baaa81e1d45af73027892eb84a4f"/>
-<a href="namespaceinviwo_1_1color.html#a0c0970d51fdfcc64cc988718f4ebe8c3"/>
-<a href="namespaceinviwo_1_1color.html#a2b91a9e0ddae11ee98c3e8d648b053aa"/>
+<a href="namespaceinviwo_1_1color.html#a12301d250123ab4c62485bc2952d6a86"/>
+<a href="namespaceinviwo_1_1color.html#a144c484386c0ac08a2c1e12d763c3057"/>
+<a href="namespaceinviwo_1_1color.html#a19dc2a5b4c5e28b129304ff5f3e1e443"/>
+<a href="namespaceinviwo_1_1color.html#a1f7a7d634b67c8090fd164029ce1dac9"/>
 <a href="namespaceinviwo_1_1color.html#a32d3c81a4ed4172c973ade0c3bfd6d6c"/>
 <a href="namespaceinviwo_1_1color.html#a3a0f022b5a7cdb394061b434d4742140"/>
-<a href="namespaceinviwo_1_1color.html#a3d661824f78f960df267461ce9732f81"/>
+<a href="namespaceinviwo_1_1color.html#a3b3e2c6804b929a5c00bdf94704a56bb"/>
 <a href="namespaceinviwo_1_1color.html#a3edf32e00600dbae36e24c9375d0a45f"/>
-<a href="namespaceinviwo_1_1color.html#a43b0465e1009536124759eda2856c4ce"/>
-<a href="namespaceinviwo_1_1color.html#a445466c9787883cb85c13cb5ddb8b98d"/>
-<a href="namespaceinviwo_1_1color.html#a456f2a64fa654fd99a161b7a59a8421e"/>
+<a href="namespaceinviwo_1_1color.html#a440bdb9f80645ceeca69c0bd5496fbe0"/>
 <a href="namespaceinviwo_1_1color.html#a45cd318cca9809d12f6a7ef182e9f9a2"/>
 <a href="namespaceinviwo_1_1color.html#a4a95bd0a41aa8685a0b7bc5c6bb8e575"/>
+<a href="namespaceinviwo_1_1color.html#a5a44a06aa35e1f5ca877232f9d9f0ca2"/>
 <a href="namespaceinviwo_1_1color.html#a5de390f4a3420196df10458a2fef2413"/>
-<a href="namespaceinviwo_1_1color.html#a5ee6af392f1551de9250a7254ab63c05"/>
-<a href="namespaceinviwo_1_1color.html#a6f4ee9d3e2b4b3dce519d256f5d1cb95"/>
-<a href="namespaceinviwo_1_1color.html#a80a146c3f4bf132eceef7126bff75763"/>
-<a href="namespaceinviwo_1_1color.html#a9690d1d32e192933bee1ea70e06256b6"/>
-<a href="namespaceinviwo_1_1color.html#a9b1bbf01fa64b9433cdbd39aa302e26d"/>
-<a href="namespaceinviwo_1_1color.html#a9cad4b715213818c123a96c478079bca"/>
-<a href="namespaceinviwo_1_1color.html#aaa5ea7e6aa7dd69353bef207abcc6a29"/>
-<a href="namespaceinviwo_1_1color.html#ab429fe911eed93df387972f795386b47"/>
+<a href="namespaceinviwo_1_1color.html#a611818a5e16441ce7bccc19f4cd7c291"/>
+<a href="namespaceinviwo_1_1color.html#a66c524fc6204911bdfd138273eef0a51"/>
+<a href="namespaceinviwo_1_1color.html#a6a3b611cb8748b20a86f4df1b3bd5e9f"/>
+<a href="namespaceinviwo_1_1color.html#a756c889dc0ed0a92b19bc2c63dca0848"/>
+<a href="namespaceinviwo_1_1color.html#a792eb3d0cd474c7d6532b2674d792652"/>
+<a href="namespaceinviwo_1_1color.html#a8d0e0863995cedb80bc5799c3f149048"/>
+<a href="namespaceinviwo_1_1color.html#a8e227f0a071986b04d5d71cda9a342f9"/>
+<a href="namespaceinviwo_1_1color.html#a913b3e6988580d655fa0c3d2b3569df2"/>
+<a href="namespaceinviwo_1_1color.html#ab6ddf6f2f483a5fa88390343e4547820"/>
+<a href="namespaceinviwo_1_1color.html#abec7bf37d7f68dd5f97b34326b26dc78"/>
+<a href="namespaceinviwo_1_1color.html#ac8331673a597839faa143122f7fb56b3"/>
+<a href="namespaceinviwo_1_1color.html#acae1b65cffcb6c6273985c1c70597e05"/>
 <a href="namespaceinviwo_1_1color.html#ad16249430aa9aa51263a618066cf97d8"/>
 <a href="namespaceinviwo_1_1color.html#ad69620b3fe019d7bfa21052aa0f28dd6"/>
-<a href="namespaceinviwo_1_1color.html#aef5194e9c867787c5a912b266b8292fe"/>
-<a href="namespaceinviwo_1_1color.html#af2ba496461909dee01bb1320f5921553"/>
+<a href="namespaceinviwo_1_1color.html#af65dcd8fe65b6d31940243a5ecf57c6d"/>
 <a href="namespaceinviwo_1_1colorbrewer.html"/>
 <a href="namespaceinviwo_1_1colorbrewer.html#a0f95ade6b1144a9f4c178872ff1b95e3"/>
 <a href="namespaceinviwo_1_1colorbrewer.html#a1f898b879b266998202e04b7b28937d0"/>
@@ -8467,6 +8470,7 @@
 <a href="namespacemembers_type.html"/>
 <a href="namespacemembers_u.html"/>
 <a href="namespacemembers_v.html"/>
+<a href="namespacemembers_vars.html"/>
 <a href="namespacemembers_w.html"/>
 <a href="namespacemembers_x.html"/>
 <a href="namespacemembers_y.html"/>
