--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -7437,17 +7437,21 @@
 <a href="classinviwo_1_1animation_1_1Animation.html#a0876e71ff595e57da35a9fa672ae9eb2"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a57d69bad571a373178e26c81035d12e7"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a6aba0f4a6735e7324608e07deebd7d24"/>
+<a href="classinviwo_1_1animation_1_1Animation.html#a6e0eb135b71cce2342d2605ed99e4fa7"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a6fae95a3f84994f271e9894722574cc3"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a76de0aed5c4482861964467184982bdf"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a7c0874408d83cc3a848e9243bf33513e"/>
+<a href="classinviwo_1_1animation_1_1Animation.html#a801f1dc4526a7565004d81d8bc1cc0a0"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a895fd1af788c20d1498e0e950db6e33d"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a9004723bd5b4676473573a8aedc29925"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#a989c3905fc2a36dd0c4f05148d727ab1"/>
+<a href="classinviwo_1_1animation_1_1Animation.html#a9aacc5fc266adffe691cfb059f1e76b8"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#aa4e730c61fde314647c25a7e7dae886e"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#ab56f7791bd6ef28027fa1b441dad539d"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#ac8c83e369297a9122f83a16585b10337"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#ac93506c64f230c931eeea1a262f799f1"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#ad564b0758d59a8983e6b87a783b83e4f"/>
+<a href="classinviwo_1_1animation_1_1Animation.html#adfae498e5326a6d75c2757db761db325"/>
 <a href="classinviwo_1_1animation_1_1Animation.html#af5c20a59631336d17fd266115ff06775"/>
 <a href="classinviwo_1_1animation_1_1AnimationController.html"/>
 <a href="classinviwo_1_1animation_1_1AnimationController.html#a1335d8e6ddb069c2d6396b784aee96c2"/>
