--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,16 @@
 </style>
 </head>
 <body>
+<h2>2024-11-27 <code class="notranslate">DataMinMaxGL</code> of GL representations with Compute Shaders</h2>
+<p>The class <code class="notranslate">DataMinMaxGL</code>  provides functionality to determine min/max values of Buffers, Layers, and Volumes on the GPU. The implementation utilizes compute shaders directly accessing the corresponding GL representations. Since there is some overhead regarding managing shaders, an instantiation of <code class="notranslate">utilgl::DataMinMaxGL</code> should be kept around for subsequent calls of <code class="notranslate">DataMinMaxGL::minMax()</code>.</p>
+<p>Check with <code class="notranslate">utilgl::DataMinMaxGL::isSuppportedByGPU()</code> whether the graphics hardware and driver support compute shaders and necessary OpenGL extensions. If there is no GPU support available, <code class="notranslate">DataMinMaxGL</code> will fall back on determining min/max values with <code class="notranslate">util::*MinMax()</code> using RAM representations (<code class="notranslate">&lt;modules/base/algorithm/dataminmax.h&gt;</code>).</p>
+<h2>2024-11-27 DataMapper: symmetric signed fixed-point normalization</h2>
+<p>The <code class="notranslate">DataMapper</code> was extended to use either asymmetric or symmetric ranges to be consistent with the OpenGL  implementation. From version 4.2 and above, OpenGL uses a symmetric range to convert between normalized<br>
+fixed-point integers and floating point values. For example, the range [-127, 127] is used<br>
+for the normalization of 8bit signed integers instead of [-128, 127].</p>
+<p>In order to match the normalization of signed integer formats on the GPU, the symmetric<br>
+normalization has to be used in the DataMapper for OpenGL &gt;= 4.2. Use the utility function <code class="notranslate">OpenGLCapabilities::isSignedIntNormalizationSymmetric()</code> to determine whether symmetric or asymmetric ranges are used by OpenGL.</p>
+<p>See OpenGL 4.6 specification, Section 2.3.5 Fixed-Point Data Conversion.</p>
 <h2>2024-11-26 <strong>Breaking</strong> change to Processor::getProcessorInfo()</h2>
 <p>The <code class="notranslate">Processor::getProcessorInfo()</code> method now returns a <code class="notranslate">const ProcessorInfo&amp;</code> instead of a <code class="notranslate">const ProcessorInfo</code>. This change is to prevent copying the <code class="notranslate">ProcessorInfo</code> object when it is not necessary. The method signature has been updated in all processors in the Inviwo repo. But if you have your own processors, you need to update the method signature manually.  Your need to change</p>
 <div class="highlight highlight-source-c++"><pre class="notranslate"><span class="pl-k">virtual</span> <span class="pl-k">const</span> ProcessorInfo <span class="pl-en">getProcessorInfo</span>() <span class="pl-k">const</span> <span class="pl-k">override</span>;</pre></div>
