Update C++ API Docs

--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -3553,6 +3553,8 @@
 <a href="structinviwo_1_1utilgl_1_1ColorMaskState-members.html"/>
 <a href="structinviwo_1_1utilgl_1_1CullFaceState.html"/>
 <a href="structinviwo_1_1utilgl_1_1CullFaceState-members.html"/>
+<a href="classinviwo_1_1utilgl_1_1DataMinMaxGL.html"/>
+<a href="classinviwo_1_1utilgl_1_1DataMinMaxGL-members.html"/>
 <a href="structinviwo_1_1utilgl_1_1Enable.html"/>
 <a href="structinviwo_1_1utilgl_1_1Enable-members.html"/>
 <a href="structinviwo_1_1utilgl_1_1GlBoolState.html"/>
@@ -4648,8 +4650,12 @@
 <a href="classinviwo_1_1DataInport.html#a0cdb1be1c190675c88b4e9faa3274842"/>
 <a href="classinviwo_1_1DataInport.html#af4236498c4f1a8f70ebbd1df5e949e3b"/>
 <a href="classinviwo_1_1DataMapper.html"/>
+<a href="classinviwo_1_1DataMapper.html#a12200eaf1ccb02da54b60c8321150201"/>
 <a href="classinviwo_1_1DataMapper.html#a28fe98d1a4bc03db93227f42e4189d89"/>
 <a href="classinviwo_1_1DataMapper.html#a55b255ba9f000ef79caaab4445feae08"/>
+<a href="classinviwo_1_1DataMapper.html#a66564110d98821113d007cae18bd2387"/>
+<a href="classinviwo_1_1DataMapper.html#a66564110d98821113d007cae18bd2387a314084a577b998d8089dff72c98c58b0"/>
+<a href="classinviwo_1_1DataMapper.html#a66564110d98821113d007cae18bd2387af334649ef5e5d0ffe200751d07012626"/>
 <a href="classinviwo_1_1DataMapper.html#a75c426163dc82adac2f75ea23f5ef758"/>
 <a href="classinviwo_1_1DataMapper.html#a8878192a26497418c729382b88ece29e"/>
 <a href="classinviwo_1_1DataMapper.html#a8c264401aaf9ed0abaa4a18bfe258ba4"/>
@@ -4657,6 +4663,7 @@
 <a href="classinviwo_1_1DataMapper.html#abfca23a4c6c956367356d7e7b6dbda99"/>
 <a href="classinviwo_1_1DataMapper.html#ace2bd755e9c66a1075c0215966cc4bd0"/>
 <a href="classinviwo_1_1DataMapper.html#afa19794edd95ad5e37ae539fa523e0c2"/>
+<a href="classinviwo_1_1DataMapper.html#afd16a476f51c4273a78f22736e17cf3d"/>
 <a href="classinviwo_1_1DataOutport.html"/>
 <a href="classinviwo_1_1DataOutport.html#a17d6355372207f30db10efdbd9f9d00d"/>
 <a href="classinviwo_1_1DataOutport.html#a30a1647f8b30a27cd2c672cfdc3f1941"/>
@@ -5856,6 +5863,7 @@
 <a href="classinviwo_1_1Observer.html#aa62add49e9cc4b358f61aa9d38aee991"/>
 <a href="classinviwo_1_1Observer.html#af03fb7de020a1084d2aa064206315a9d"/>
 <a href="classinviwo_1_1OpenGLCapabilities.html"/>
+<a href="classinviwo_1_1OpenGLCapabilities.html#aa56c518feff295a4e5623e3aba966c8b"/>
 <a href="classinviwo_1_1OpenGLCapabilities_1_1GLSLShaderVersion.html"/>
 <a href="classinviwo_1_1OpenGLException.html"/>
 <a href="classinviwo_1_1OpenGLInitException.html"/>
@@ -7849,6 +7857,8 @@
 <a href="classinviwo_1_1util_1_1ostream__joiner.html"/>
 <a href="classinviwo_1_1utildoc_1_1TableBuilder.html"/>
 <a href="classinviwo_1_1utilgl_1_1ActivateFBO.html"/>
+<a href="classinviwo_1_1utilgl_1_1DataMinMaxGL.html"/>
+<a href="classinviwo_1_1utilgl_1_1DataMinMaxGL.html#a66dd5216bd48074222ca52dfb84f6e8f"/>
 <a href="classinviwo_1_1utilqt_1_1EditorFileObserver.html"/>
 <a href="classinviwo_1_1utilqt_1_1detail_1_1QtProcessFrontHelper.html"/>
 <a href="classinviwo_1_1xml_1_1Kind.html"/>
