--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,24 @@
 </style>
 </head>
 <body>
+<h2>2025-01-17 File Caching</h2>
+<p>New file caching processors have been added:</p>
+<ul>
+<li><code class="notranslate">Volume File Cache</code></li>
+<li><code class="notranslate">Layer File Cache</code></li>
+<li><code class="notranslate">Mesh File Cache</code></li>
+<li><code class="notranslate">JSON File Cache</code></li>
+<li><code class="notranslate">DataFrame File Cache</code></li>
+</ul>
+<p>They can be used to "cache" result from step within the network. Just drop a File Cache processor on a connection, and it will capture the state of all the processors above it in a hash and then save it's data to disk.<br>
+If the same state happens at a later point the processor will load the data from disk, and the potentially expensive computation above can be avoided.</p>
+<p>The the screenshot below show an example where we have cached the results of an "expensive"  <code class="notranslate">Volume Creator</code>.<br>
+Here we have reloaded the network and can note that the <code class="notranslate">Volume Creator</code> have not been run, since the <code class="notranslate">File Cache</code> was able to provide the data.<br>
+<a target="_blank" rel="noopener noreferrer" href="resources/changelog/filecache.png"><img src="resources/changelog/filecache.png" alt="File cache example" style="max-width: 100%;"></a></p>
+<p>For the File Cache processor to work you have to provide an existing directory to store caches in. The processor will never remove any caches, so you might want to do that manually periodically.</p>
+<p>A <code class="notranslate">FileCache</code> can easily be registered for other data types.</p>
+<div class="highlight highlight-source-c++"><pre class="notranslate">registerProcessor&lt;FileCache&lt;MyDataType&gt;&gt;();</pre></div>
+<p>It requires that at least one pair of <code class="notranslate">DataReader</code> and <code class="notranslate">DataWriter</code> with the same <code class="notranslate">FileExtension</code> is registered for the data type.</p>
 <h2>2025-01-13 Exception constructors</h2>
 <p>With the new <code class="notranslate">SourceContext</code> we no longer need to use macros to construct the context when throwing exceptions. The following signatures are now used:</p>
 <ul>
