Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -9779,6 +9779,10 @@
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Camera.getDirection">getDirection() (inviwopy.data.Camera method)</a>
 </li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Processor.getDirectPredecessors">getDirectPredecessors() (inviwopy.Processor method)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Processor.getDirectSuccessors">getDirectSuccessors() (inviwopy.Processor method)</a>
+</li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Layer.getEditableLayerPyRepresentation">getEditableLayerPyRepresentation() (inviwopy.data.Layer method)</a>
 </li>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.Volume.getEditableVolumePyRepresentation">getEditableVolumePyRepresentation() (inviwopy.data.Volume method)</a>
@@ -9972,6 +9976,8 @@
       <li><a href="_generated/inviwopy.html#inviwopy.Processor.getPortsInGroup">getPortsInGroup() (inviwopy.Processor method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.Processor.getPortsInSameGroup">getPortsInSameGroup() (inviwopy.Processor method)</a>
+</li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Processor.getPredecessors">getPredecessors() (inviwopy.Processor method)</a>
 </li>
       <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.ListProperty.getPrefab">getPrefab() (inviwopy.properties.ListProperty method)</a>
 </li>
@@ -10189,6 +10195,8 @@
         <li><a href="_generated/inviwopy.html#inviwopy.Tags.getString">(inviwopy.Tags method)</a>
 </li>
       </ul></li>
+      <li><a href="_generated/inviwopy.html#inviwopy.Processor.getSuccessors">getSuccessors() (inviwopy.Processor method)</a>
+</li>
       <li><a href="_generated/ivwbnl.html#ivwbnl.BrushingAndLinkingManager.getTargets">getTargets() (ivwbnl.BrushingAndLinkingManager method)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.DataReaderFactory.getTransferFunctionReader">getTransferFunctionReader() (inviwopy.DataReaderFactory method)</a>
