--- a/resources/changelog.html
+++ b/resources/changelog.html
@@ -33,6 +33,19 @@
 </style>
 </head>
 <body>
+<h2>2025-02-28 DataFrame to JSON conversion</h2>
+<p>The conversion of <code class="notranslate">DataFrame</code> to and from JSON was updated. Now, the order of columns is explicitly encoded since the JSON specification does not guarantee the ordering of objects and keys. In addition, the data types of the columns can be specified using Inviwo's data types (<code class="notranslate">DataFormatBase::get(id)-&gt;getString()</code>).</p>
+<p>The new JSON output is based on Pandas <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_json.html" rel="nofollow"><code class="notranslate">pandas.DataFrame.to_json(order='split')</code></a> and has the following JSON object layout:</p>
+<div class="highlight highlight-source-json"><pre class="notranslate">{
+    <span class="pl-ent">"columns"</span>: [ <span class="pl-s"><span class="pl-pds">"</span>col1<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>col2<span class="pl-pds">"</span></span> ],
+    <span class="pl-ent">"data"</span>: [
+        [ <span class="pl-c1">5.1</span>, <span class="pl-s"><span class="pl-pds">"</span>category A<span class="pl-pds">"</span></span> ],
+        [<span class="pl-c1">4.9</span>, <span class="pl-s"><span class="pl-pds">"</span>category B<span class="pl-pds">"</span></span> ]
+    ],
+    <span class="pl-ent">"index"</span>: [ <span class="pl-c1">0</span>, <span class="pl-c1">1</span> ],
+    <span class="pl-ent">"types"</span>: [ <span class="pl-s"><span class="pl-pds">"</span>FLOAT64<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>CATEGORICAL<span class="pl-pds">"</span></span> ]
+}</pre></div>
+<p>When converting from JSON to <code class="notranslate">DataFrame</code>, the JSON object must contain the following elements: <code class="notranslate">"columns"</code> (list of column headers) and <code class="notranslate">"data"</code> (list of rows). The elements <code class="notranslate">"index"</code> and <code class="notranslate">"types"</code> are optional. If no types are provided, the column types will be derived from JSON types. In case a column only holds <code class="notranslate">null</code> values, the inferred data type will be float. Null values are converted to NaN in float columns and 0 in integer columns.</p>
 <h2>2025-01-17 File Caching</h2>
 <p>New file caching processors have been added:</p>
 <ul>
