Update C++ API Docs

--- a/cpp-api/classinviwo_1_1DataReaderException.html
+++ b/cpp-api/classinviwo_1_1DataReaderException.html
@@ -119,7 +119,7 @@ $(function(){initNavTree('classinviwo_1_1DataReaderException.html',''); initResi
   <img src="classinviwo_1_1DataReaderException.png" usemap="#inviwo::DataReaderException_map" alt=""/>
   <map id="inviwo::DataReaderException_map" name="inviwo::DataReaderException_map">
 <area href="classinviwo_1_1Exception.html" alt="inviwo::Exception" shape="rect" coords="0,112,208,136"/>
-<area href="classinviwo_1_1JSONConversionException.html" title="This exception is thrown by the to_json(json&amp; j, const DataFrame* df) in case the input is unsupporte..." alt="inviwo::JSONConversionException" shape="rect" coords="0,224,208,248"/>
+<area href="classinviwo_1_1JSONConversionException.html" title="This exception is thrown by from_json(json&amp; j, const DataFrame* df) in case the input is illformated ..." alt="inviwo::JSONConversionException" shape="rect" coords="0,224,208,248"/>
   </map>
 </div></div>
 <table class="memberdecls">
