Update Python API Docs

--- a/python-api/genindex.html
+++ b/python-api/genindex.html
@@ -1332,7 +1332,21 @@
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.vec4Vector.__getitem__">(inviwopy.vec4Vector method)</a>
 </li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.CategoricalColumn.__getitem__">(ivwdataframe.CategoricalColumn method)</a>
+</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.DataFrame.__getitem__">(ivwdataframe.DataFrame method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.__getitem__">(ivwdataframe.DoubleColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.__getitem__">(ivwdataframe.FloatColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.__getitem__">(ivwdataframe.Int64Column method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn.__getitem__">(ivwdataframe.IntColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn.__getitem__">(ivwdataframe.Size_tColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn.__getitem__">(ivwdataframe.UIntColumn method)</a>
 </li>
       </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.Version.__gt__">__gt__() (inviwopy.Version method)</a>
@@ -6408,6 +6422,20 @@
 </li>
         <li><a href="_generated/inviwopy.html#inviwopy.vec4Vector.__setitem__">(inviwopy.vec4Vector method)</a>
 </li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.CategoricalColumn.__setitem__">(ivwdataframe.CategoricalColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.__setitem__">(ivwdataframe.DoubleColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.__setitem__">(ivwdataframe.FloatColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.__setitem__">(ivwdataframe.Int64Column method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.IntColumn.__setitem__">(ivwdataframe.IntColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.Size_tColumn.__setitem__">(ivwdataframe.Size_tColumn method)</a>
+</li>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.UIntColumn.__setitem__">(ivwdataframe.UIntColumn method)</a>
+</li>
       </ul></li>
       <li><a href="_generated/inviwopy.camerautil.html#inviwopy.camerautil.Side.__str__">__str__() (inviwopy.camerautil.Side method)</a>
 
@@ -9045,6 +9073,18 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.End">End (inviwopy.IvwKey attribute)</a>
 </li>
+      <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.DoubleMinMaxProperty.end">end (inviwopy.properties.DoubleMinMaxProperty property)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.FloatMinMaxProperty.end">(inviwopy.properties.FloatMinMaxProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Int64MinMaxProperty.end">(inviwopy.properties.Int64MinMaxProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IntMinMaxProperty.end">(inviwopy.properties.IntMinMaxProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Size_tMinMaxProperty.end">(inviwopy.properties.Size_tMinMaxProperty property)</a>
+</li>
+      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.IvwKey.Enter">Enter (inviwopy.IvwKey attribute)</a>
 
       <ul>
@@ -9099,12 +9139,12 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.PickingHoverState.Exit">Exit (inviwopy.PickingHoverState attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.glm.html#inviwopy.glm.exp">exp() (in module inviwopy.glm)</a>
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.CodeState.Experimental">Experimental (inviwopy.CodeState attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.MeshSequence.extend">extend() (inviwopy.data.MeshSequence method)</a>
 
       <ul>
@@ -9523,9 +9563,11 @@
       </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.getApp">getApp() (in module inviwopy)</a>
 </li>
-      <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.getAsString">getAsString() (ivwdataframe.DoubleColumn method)</a>
+      <li><a href="_generated/ivwdataframe.html#ivwdataframe.CategoricalColumn.getAsString">getAsString() (ivwdataframe.CategoricalColumn method)</a>
 
       <ul>
+        <li><a href="_generated/ivwdataframe.html#ivwdataframe.DoubleColumn.getAsString">(ivwdataframe.DoubleColumn method)</a>
+</li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.FloatColumn.getAsString">(ivwdataframe.FloatColumn method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.Int64Column.getAsString">(ivwdataframe.Int64Column method)</a>
@@ -13909,6 +13951,8 @@
       <li><a href="_generated/inviwopy.data.html#inviwopy.data.BitSet.set">set() (inviwopy.data.BitSet method)</a>
 
       <ul>
+        <li><a href="_generated/inviwopy.data.html#inviwopy.data.TFPrimitiveSet.set">(inviwopy.data.TFPrimitiveSet method)</a>
+</li>
         <li><a href="_generated/ivwbnl.html#ivwbnl.IndexList.set">(ivwbnl.IndexList method)</a>
 </li>
         <li><a href="_generated/ivwdataframe.html#ivwdataframe.CategoricalColumn.set">(ivwdataframe.CategoricalColumn method)</a>
@@ -14236,6 +14280,18 @@
 </li>
       <li><a href="_generated/inviwopy.html#inviwopy.CodeState.Stable">Stable (inviwopy.CodeState attribute)</a>
 </li>
+      <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.DoubleMinMaxProperty.start">start (inviwopy.properties.DoubleMinMaxProperty property)</a>
+
+      <ul>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.FloatMinMaxProperty.start">(inviwopy.properties.FloatMinMaxProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Int64MinMaxProperty.start">(inviwopy.properties.Int64MinMaxProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.IntMinMaxProperty.start">(inviwopy.properties.IntMinMaxProperty property)</a>
+</li>
+        <li><a href="_generated/inviwopy.properties.html#inviwopy.properties.Size_tMinMaxProperty.start">(inviwopy.properties.Size_tMinMaxProperty property)</a>
+</li>
+      </ul></li>
       <li><a href="_generated/inviwopy.html#inviwopy.PickingState.Started">Started (inviwopy.PickingState attribute)</a>
 
       <ul>
