Update C++ API Docs

--- a/cpp-api/classinviwo_1_1OrdinalBaseWidget.html
+++ b/cpp-api/classinviwo_1_1OrdinalBaseWidget.html
@@ -120,9 +120,10 @@ $(function(){initNavTree('classinviwo_1_1OrdinalBaseWidget.html',''); initResiza
   <map id="inviwo::OrdinalBaseWidget_3C_20T_20_3E_map" name="inviwo::OrdinalBaseWidget_3C_20T_20_3E_map">
 <area href="classinviwo_1_1SliderWidgetQt.html" alt="inviwo::SliderWidgetQt&lt; int &gt;" shape="rect" coords="0,56,211,80"/>
 <area href="classinviwo_1_1SliderWidgetQt.html" alt="inviwo::SliderWidgetQt&lt; double &gt;" shape="rect" coords="221,56,432,80"/>
-<area href="classinviwo_1_1OrdinalEditorWidget.html" alt="inviwo::OrdinalEditorWidget&lt; T &gt;" shape="rect" coords="442,56,653,80"/>
-<area href="classinviwo_1_1OrdinalSpinBoxWidget.html" alt="inviwo::OrdinalSpinBoxWidget&lt; T &gt;" shape="rect" coords="663,56,874,80"/>
-<area href="classinviwo_1_1SliderWidgetQt.html" alt="inviwo::SliderWidgetQt&lt; T &gt;" shape="rect" coords="884,56,1095,80"/>
+<area href="classinviwo_1_1NumberWidget.html" alt="inviwo::NumberWidget&lt; T &gt;" shape="rect" coords="442,56,653,80"/>
+<area href="classinviwo_1_1OrdinalEditorWidget.html" alt="inviwo::OrdinalEditorWidget&lt; T &gt;" shape="rect" coords="663,56,874,80"/>
+<area href="classinviwo_1_1OrdinalSpinBoxWidget.html" alt="inviwo::OrdinalSpinBoxWidget&lt; T &gt;" shape="rect" coords="884,56,1095,80"/>
+<area href="classinviwo_1_1SliderWidgetQt.html" alt="inviwo::SliderWidgetQt&lt; T &gt;" shape="rect" coords="1105,56,1316,80"/>
   </map>
 </div></div>
 <table class="memberdecls">
