--- a/cpp-api/doxygen_crawl.html
+++ b/cpp-api/doxygen_crawl.html
@@ -82,6 +82,8 @@
 <a href="classinviwo_1_1BaseModule.html#addbfb820f0a35c469684ee9f715ccd18"/>
 <a href="classinviwo_1_1BaseModuleCallback-members.html"/>
 <a href="classinviwo_1_1BaseModuleCallback.html"/>
+<a href="classinviwo_1_1BaseNumberWidget-members.html"/>
+<a href="classinviwo_1_1BaseNumberWidget.html"/>
 <a href="classinviwo_1_1BaseOptionProperty-members.html"/>
 <a href="classinviwo_1_1BaseOptionProperty.html"/>
 <a href="classinviwo_1_1BaseOptionProperty.html#a60380151d11ecca727fcaa1a2e710955"/>
@@ -2443,6 +2445,8 @@
 <a href="classinviwo_1_1NumberLineEdit.html"/>
 <a href="classinviwo_1_1NumberLineEdit.html#a49f7a2f9db48657c9a5877500c4a91e0"/>
 <a href="classinviwo_1_1NumberLineEdit.html#af94dbde0f76ad6efb2a49035f06a3525"/>
+<a href="classinviwo_1_1NumberWidget-members.html"/>
+<a href="classinviwo_1_1NumberWidget.html"/>
 <a href="classinviwo_1_1OITModule-members.html"/>
 <a href="classinviwo_1_1OITModule.html"/>
 <a href="classinviwo_1_1Observable-members.html"/>
@@ -6047,6 +6051,7 @@
 <a href="namespaceinviwo_1_1utilqt.html#a29bdcb20eceda58d17346a1fe2df6755"/>
 <a href="namespaceinviwo_1_1utilqt.html#a311b90073105033955d885663fc6c37d"/>
 <a href="namespaceinviwo_1_1utilqt.html#a331aa2b4fc9021acd553c44cb59b1f29"/>
+<a href="namespaceinviwo_1_1utilqt.html#a4e4f204db5ef145c73f1b6ca2a404e96"/>
 <a href="namespaceinviwo_1_1utilqt.html#a5786ad672da4f0db7045a7e35eb0f21f"/>
 <a href="namespaceinviwo_1_1utilqt.html#a583ab1296d218f71ed78d739424f5fab"/>
 <a href="namespaceinviwo_1_1utilqt.html#a62c333749398985401196be50189873e"/>
@@ -6056,6 +6061,7 @@
 <a href="namespaceinviwo_1_1utilqt.html#a75fff05adc3230c287f783f1339e5d38"/>
 <a href="namespaceinviwo_1_1utilqt.html#a7740e56d786b88aca6119cdbdd71047a"/>
 <a href="namespaceinviwo_1_1utilqt.html#a8d6723b64f4534fdf1cd43ea07ce5df6"/>
+<a href="namespaceinviwo_1_1utilqt.html#aa09451ba243f1be606192c27596a8b0f"/>
 <a href="namespaceinviwo_1_1utilqt.html#aa9365361b68923637d43f1fc60f4df26"/>
 <a href="namespaceinviwo_1_1utilqt.html#aa9fdc5daccf5dbffb15b28e87095d475"/>
 <a href="namespaceinviwo_1_1utilqt.html#abbd21847380b754d0ede78a6d97dbed2"/>
@@ -6090,6 +6096,7 @@
 <a href="namespacemembers_func_i.html"/>
 <a href="namespacemembers_func_l.html"/>
 <a href="namespacemembers_func_m.html"/>
+<a href="namespacemembers_func_n.html"/>
 <a href="namespacemembers_func_o.html"/>
 <a href="namespacemembers_func_p.html"/>
 <a href="namespacemembers_func_r.html"/>
@@ -6106,6 +6113,7 @@
 <a href="namespacemembers_i.html"/>
 <a href="namespacemembers_l.html"/>
 <a href="namespacemembers_m.html"/>
+<a href="namespacemembers_n.html"/>
 <a href="namespacemembers_o.html"/>
 <a href="namespacemembers_p.html"/>
 <a href="namespacemembers_r.html"/>
@@ -6321,6 +6329,8 @@
 <a href="structinviwo_1_1NodeDebugger.html"/>
 <a href="structinviwo_1_1NodeDebugger_1_1Node-members.html"/>
 <a href="structinviwo_1_1NodeDebugger_1_1Node.html"/>
+<a href="structinviwo_1_1NumberWidgetConfig-members.html"/>
+<a href="structinviwo_1_1NumberWidgetConfig.html"/>
 <a href="structinviwo_1_1OptionPropertyState-members.html"/>
 <a href="structinviwo_1_1OptionPropertyState.html"/>
 <a href="structinviwo_1_1OptionPropertyTraits-members.html"/>
